add a button to be used

--- a/static/beta.style.css
+++ b/static/beta.style.css
@@ -30,3 +30,12 @@ blockquote p {
 #text {
     overflow-wrap: anywhere;
 }
+
+#button-manage {
+    width: 70px;
+    margin-left: 10px;
+}
+
+#header {
+    display: flex;
+}
