--- a/static/beta.style.css
+++ b/static/beta.style.css
@@ -7,6 +7,7 @@ textarea {
     min-height: 22px;
     max-height: calc(100vh - 250px);
     font-size: smaller;
+    resize: none;
 }
 
 #outer {
@@ -31,7 +32,7 @@ blockquote p {
     overflow-wrap: anywhere;
 }
 
-#button-manage {
+#manage {
     width: 70px;
     margin-left: 10px;
 }
