交个中间版本

--- a/static/beta.style.css
+++ b/static/beta.style.css
@@ -33,7 +33,10 @@ blockquote p {
 }
 
 #text {
-    overflow-wrap: anywhere;
+    -moz-overflow-wrap: anywhere;
+    -webkit-overflow-wrap: anywhere;
+    -o-overflow-wrap: anywhere;
+    overflow-wrap: break-word;
 }
 
 #manage {
